# tallerTpGtupal

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.yaml  install.sh
bibliotecas-gui/.svn/: wc.db
bibliotecas-gui/sdlpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  sdlpp-hello
bibliotecas-gui/sdlpp/src/: board.cpp  board.h  mainSdlEvents.cpp  mainSdlHello.cpp  menu.cpp  menu.h  piece.cpp  piece.h  spot.cpp  spot.h
bibliotecas-gui/sdlpp/src/client/: mainSdlHello.cpp  menu.cpp
bibliotecas-gui/sdlpp/src/server/: bishop.cpp  board.cpp  board.h  king.cpp  knight.cpp  main.cpp  pawn.cpp  piece.cpp  piece.h  queen.cpp  rook.cpp  rook.h  square.cpp  square.h
libs/yamlcpp/: CTestTestfile.cmake  DartConfiguration.tcl
libs/yamlcpp/util/: CTestTestfile.cmake  parse  read  sandbox
src/client/: board.cpp  board.h  chessboard.cpp  chessboard.h  client.cpp  client.h  endScreen.cpp  endScreen.h  main.cpp  mainSdlEvents.cpp  mainSdlHello.cpp  menu.cpp  menu.h  renderpiece.cpp  renderpiece.h  spot.h
src/common/: common_protocol.cpp  common_protocol.h  common_socket.cpp  common_socket.h
src/server/: accept_thread.cpp  accept_thread.h  bishop.cpp  bishop.h  blocking_queue.cpp  blocking_queue.h  board.cpp  board.h  client.cpp  client.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.cpp  queen.h  rook.cpp  rook.h  server.cpp  server.h  square.cpp  square.h
